--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p>projeto desenvolvido pela alura, sem fins lucrativos.</p>
     </footer>
 
+    <script src="app.js"></script>
+    <script src="pergutas.js"></script>
+
 </body>
 
 </html>
